[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Misc/ControlBind.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Global/ControlerMenu.gd" type="Script" id=2]

[sub_resource type="VisualShaderNodeTexture" id=12]
source = 1

[sub_resource type="VisualShaderNodeInput" id=13]
input_name = "screen_uv"

[sub_resource type="VisualShaderNodeScalarConstant" id=14]
constant = 2.0

[sub_resource type="VisualShaderNodeVectorInterp" id=15]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 1, 1, 1 ), 2, Vector3( 0.2, 0.2, 0.2 ) ]

[sub_resource type="VisualShader" id=16]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0 = vec3(SCREEN_UV, 0.0);

// Scalar:4
	float n_out4p0 = 2.000000;

// Texture:2
	vec3 n_out2p0;
	float n_out2p1;
	{
		vec4 _tex_read = textureLod(SCREEN_TEXTURE, n_out3p0.xy, n_out4p0);
		n_out2p0 = _tex_read.rgb;
		n_out2p1 = _tex_read.a;
	}

// VectorMix:5
	vec3 n_in5p0 = vec3(0.00000, 0.00000, 0.00000);
	vec3 n_in5p2 = vec3(0.20000, 0.20000, 0.20000);
	vec3 n_out5p0 = mix(n_in5p0, n_out2p0, n_in5p2);

// Output:0
	COLOR.rgb = n_out5p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -407, 109 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 680, 160 )
nodes/fragment/2/node = SubResource( 12 )
nodes/fragment/2/position = Vector2( 66, 156 )
nodes/fragment/3/node = SubResource( 13 )
nodes/fragment/3/position = Vector2( -200, 160 )
nodes/fragment/4/node = SubResource( 14 )
nodes/fragment/4/position = Vector2( -180, 240 )
nodes/fragment/5/node = SubResource( 15 )
nodes/fragment/5/position = Vector2( 360, 160 )
nodes/fragment/connections = PoolIntArray( 3, 0, 2, 0, 4, 0, 2, 1, 2, 0, 5, 1, 5, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 16 )

[node name="ControllerMenu" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
text = "Controls"
align = 1

[node name="CurrentMapList" type="Label" parent="."]
anchor_right = 1.0
margin_top = 15.0973
margin_bottom = 29.0973
align = 1
autowrap = true
uppercase = true

[node name="ClearInfo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -14.0
margin_right = 160.0
align = 1

[node name="Confirm" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 36.0
margin_bottom = -7.0
focus_next = NodePath("../Control/Left")
focus_previous = NodePath("../PlayerSwap")
text = "OK"
script = ExtResource( 1 )
bind = ""

[node name="PlayerSwap" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.2247
margin_top = -24.6047
margin_right = -7.22473
margin_bottom = -4.60471
focus_next = NodePath("../Confirm")
focus_previous = NodePath("../SaveInputs")
text = "Swap"
script = ExtResource( 1 )
bind = ""

[node name="Label" type="Label" parent="PlayerSwap"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.5
margin_top = -16.0315
margin_right = 23.5
margin_bottom = -2.03149
text = "Player 1"
align = 1
valign = 1

[node name="SaveInputs" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -51.2247
margin_top = -64.5801
margin_right = -7.22473
margin_bottom = -44.5801
focus_next = NodePath("../PlayerSwap")
focus_previous = NodePath("../Defaults")
text = "Save"
script = ExtResource( 1 )
bind = ""

[node name="Defaults" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -60.1915
margin_top = -89.1848
margin_right = -2.1915
margin_bottom = -69.1848
focus_next = NodePath("../SaveInputs")
focus_previous = NodePath("../Action3")
text = "Default"
script = ExtResource( 1 )
bind = ""

[node name="Pause" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.908
anchor_right = 0.5
anchor_bottom = 0.908
margin_left = -22.0
margin_top = -20.0282
margin_right = 22.0
margin_bottom = -0.0282135
focus_next = NodePath("../Action")
focus_previous = NodePath("../Control/Right")
text = "_"
script = ExtResource( 1 )
bind = "gm_pause"

[node name="Label" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.6047
margin_right = 20.0
margin_bottom = -24.6047
text = "Start"
align = 1
valign = 1

[node name="Action" type="Button" parent="."]
anchor_left = 0.916
anchor_top = 0.5
anchor_right = 0.916
anchor_bottom = 0.5
margin_left = -97.5027
margin_top = 8.81525
margin_right = -53.5027
margin_bottom = 28.8152
focus_next = NodePath("../Action2")
focus_previous = NodePath("../Pause")
text = "_"
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Action"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.6047
margin_right = 20.0
margin_bottom = -24.6047
text = "A"
align = 1
valign = 1

[node name="Action2" type="Button" parent="."]
anchor_left = 0.916
anchor_top = 0.5
anchor_right = 0.916
anchor_bottom = 0.5
margin_left = -58.8215
margin_top = -12.2072
margin_right = -14.8215
margin_bottom = 7.79282
focus_next = NodePath("../Action3")
focus_previous = NodePath("../Action")
text = "_"
script = ExtResource( 1 )
bind = "gm_action2"

[node name="Label" type="Label" parent="Action2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.6047
margin_right = 20.0
margin_bottom = -24.6047
text = "B"
align = 1
valign = 1

[node name="Action3" type="Button" parent="."]
anchor_left = 0.916
anchor_top = 0.5
anchor_right = 0.916
anchor_bottom = 0.5
margin_left = -24.3447
margin_top = -34.491
margin_right = 19.6553
margin_bottom = -14.4909
focus_next = NodePath("../Defaults")
focus_previous = NodePath("../Action2")
text = "_"
script = ExtResource( 1 )
bind = "gm_action3"

[node name="Label" type="Label" parent="Action3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.6047
margin_right = 20.0
margin_bottom = -24.6047
text = "C"
align = 1
valign = 1

[node name="Control" type="Control" parent="."]
anchor_left = 0.024
anchor_top = 0.25
anchor_right = 0.38
anchor_bottom = 0.75
margin_left = 0.32
margin_top = 7.0
margin_right = 0.399994
margin_bottom = -8.00002

[node name="Up" type="Button" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_right = 22.0
margin_bottom = 20.0
focus_next = NodePath("../Down")
focus_previous = NodePath("../Left")
text = "_"
script = ExtResource( 1 )
bind = "gm_up"

[node name="Label" type="Label" parent="Control/Up"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -38.6047
margin_right = 20.0
margin_bottom = -24.6047
text = "UP"
align = 1
valign = 1

[node name="Down" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -20.0
margin_right = 22.0
focus_next = NodePath("../Right")
focus_previous = NodePath("../Up")
text = "_"
script = ExtResource( 1 )
bind = "gm_down"

[node name="Label" type="Label" parent="Control/Down"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -36.0486
margin_right = 30.0
margin_bottom = -22.0486
text = "DOWN"
align = 1
valign = 1

[node name="Right" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -10.0
margin_bottom = 10.0
focus_next = NodePath("../../Pause")
focus_previous = NodePath("../Down")
text = "_"
script = ExtResource( 1 )
bind = "gm_right"

[node name="Label" type="Label" parent="Control/Right"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -36.0486
margin_right = 30.0
margin_bottom = -22.0486
text = "RIGHT"
align = 1
valign = 1

[node name="Left" type="Button" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 44.0
margin_bottom = 10.0
focus_next = NodePath("../Up")
focus_previous = NodePath("../../Confirm")
text = "_"
script = ExtResource( 1 )
bind = "gm_left"

[node name="Label" type="Label" parent="Control/Left"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -36.0486
margin_right = 30.0
margin_bottom = -22.0486
text = "LEFT"
align = 1
valign = 1

[connection signal="pressed" from="Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="PlayerSwap" to="." method="_on_PlayerSwap_pressed"]
[connection signal="pressed" from="SaveInputs" to="." method="_on_SaveInputs_pressed"]
[connection signal="pressed" from="Defaults" to="." method="_on_Defaults_pressed"]
